
Version 5.27.0

New: Issue #877: Add support for VxFS filesystem statistics. Thanks to Lutz Mader for patch.

New: Enable AddressSanitizer for compilation if libasan.so is found. Use --without-asan to disable.

New: Disable support for TLS 1.0 and 1.1 when protocol is set to 'auto' (default). You can still enable
these protocols by setting the TLS {VERSION: <string>} statement.

Fixed: Issue #880: If monit is linked with AddresSanitizer, it may crash when it generates an MD5 hash.
Thanks to Lutz Mader for patch.

Fixed: Issue #872: Procmatch PID column show five digits only

Fixed: MacOS: Only first 16 characters of the process name was displayed for privileged processes,
so the pattern based process check and the procmatch CLI may miss some processes.

Fixed: If monit is linked with AddresSanitizer and a custom configuration file is passed via the -c option,
monit  may crash.

Fixed: Fix memory leak if a pemfile option is used with a path that cannot be read.

Fixed: Fix memory leak if custom "set mail-format" is set.

Fixed: Fix memory leak when no explicit "check system" service entry is present in monit configuration.


Version 5.26.0

New: Allow any characters including space in a service name if the name is
     enclosed in quotes. Example:
     check process "apache 😍" with pidfile /var/run/httpd.pid

New: The load average test now allows to set the per-CPU-core limit, so it 
     allows for generic load average limit policy regardless of CPU count. Example:
        if loadavg(1m) per core > 2 then alert

New: Added the MQTT protocol test.
     Syntax:
         IF FAILED PORT <number> PROTOCOL MQTT [USERNAME <string> PASSWORD <string>] THEN ALERT
     Example:
         check process mosquitto with pidfile /var/run/mosquitto.pid
           start program = "/sbin/start mosquitto"
           stop program = "/sbin/stop mosquitto"
           if failed port 1883 protocol mqtt then alert
