@@ -304,6 +304,7 @@ static int verifyMaxForward(int);
 static void _setPEM(char **store, char *path, const char *description, boolean_t isFile);
 static void _setSSLOptions(SslOptions_T options);
 static void _setSSLVersion(short version);
+static void _unsetSSLVersion(short version);
 static void addsecurityattribute(char *, Action_Type, Action_Type);
 
 %}
@@ -341,8 +342,9 @@ static void addsecurityattribute(char *, Action_Type, Action_Type);
 %token MODE ACTIVE PASSIVE MANUAL ONREBOOT NOSTART LASTSTATE CORE CPU TOTALCPU CPUUSER CPUSYSTEM CPUWAIT
 %token GROUP REQUEST DEPENDS BASEDIR SLOT EVENTQUEUE SECRET HOSTHEADER
 %token UID EUID GID MMONIT INSTANCE USERNAME PASSWORD
-%token TIME ATIME CTIME MTIME CHANGED MILLISECOND SECOND MINUTE HOUR DAY MONTH
+%token TIME ATIME CTIME MTIME CHANGED MILLISECOND SECOND MINUTE HOUR DAY MONTH 
 %token SSLV2 SSLV3 TLSV1 TLSV11 TLSV12 TLSV13 CERTMD5 AUTO
+%token NOSSLV2 NOSSLV3 NOTLSV1 NOTLSV11 NOTLSV12 NOTLSV13
 %token BYTE KILOBYTE MEGABYTE GIGABYTE
 %token INODE SPACE TFREE PERMISSION SIZE MATCH NOT IGNORE ACTION UPTIME
 %token EXEC UNMONITOR PING PING4 PING6 ICMP ICMPECHO NONEXIST EXIST INVALID DATA RECOVERED PASSED SUCCEEDED
@@ -815,7 +817,7 @@ ssloption       : VERIFY ':' ENABLE {
                         sslset.flags = SSL_Enabled;
                         sslset.allowSelfSigned = false;
                   }
-                | VERSIONOPT ':' sslversion {
+                | VERSIONOPT ':' sslversionlist {
                         sslset.flags = SSL_Enabled;
                   }
                 | CIPHER ':' STRING {
@@ -880,11 +882,18 @@ checksumoperator : /* EMPTY */
                  | EQUAL
                  ;
 
+sslversionlist  : /* EMPTY */
+                | sslversionlist sslversion
+                ;
+
 sslversion      : SSLV2 {
 #if defined OPENSSL_NO_SSL2 || ! defined HAVE_SSLV2
                         yyerror("Your SSL Library does not support SSL version 2");
 #endif
                         _setSSLVersion(SSL_V2);
+                  }
+                | NOSSLV2 {
+                        _unsetSSLVersion(SSL_V2);
                   }
                 | SSLV3 {
 #if defined OPENSSL_NO_SSL3
@@ -892,11 +901,17 @@ sslversion      : SSLV2 {
 #endif
                         _setSSLVersion(SSL_V3);
                   }
+                | NOSSLV3 {
+                        _unsetSSLVersion(SSL_V3);
+                  }
                 | TLSV1 {
 #if defined OPENSSL_NO_TLS1_METHOD
                         yyerror("Your SSL Library does not support TLS version 1.0");
 #endif
                         _setSSLVersion(SSL_TLSV1);
+                  }
+                | NOTLSV1 {
+                        _unsetSSLVersion(SSL_TLSV1);
                   }
                 | TLSV11 {
 #if defined OPENSSL_NO_TLS1_1_METHOD || ! defined HAVE_TLSV1_1
@@ -904,18 +919,27 @@ sslversion      : SSLV2 {
 #endif
                         _setSSLVersion(SSL_TLSV11);
                 }
+                | NOTLSV11 {
+                        _unsetSSLVersion(SSL_TLSV11);
+                  }
                 | TLSV12 {
 #if defined OPENSSL_NO_TLS1_2_METHOD || ! defined HAVE_TLSV1_2
                         yyerror("Your SSL Library does not support TLS version 1.2");
 #endif
                         _setSSLVersion(SSL_TLSV12);
                 }
+                | NOTLSV12 {
+                        _unsetSSLVersion(SSL_TLSV12);
+                  }
                 | TLSV13 {
 #if defined OPENSSL_NO_TLS1_3_METHOD || ! defined HAVE_TLSV1_3
                         yyerror("Your SSL Library does not support TLS version 1.3");
 #endif
                         _setSSLVersion(SSL_TLSV13);
                 }
+                | NOTLSV13 {
+                        _unsetSSLVersion(SSL_TLSV13);
+                  }
                 | AUTO {
                         // Enable just TLS 1.2 and 1.3 by default
 #if ! defined OPENSSL_NO_TLS1_2_METHOD && defined HAVE_TLSV1_2
@@ -4987,6 +5011,12 @@ static void _setSSLVersion(short version) {
                 sslset.version = version;
         else
                 sslset.version |= version;
+}
+
+
+static void _unsetSSLVersion(short version) {
+        if (sslset.version != -1)
+                sslset.version &= ~version;
 }
 
 
